# KanoopCommonQt

./: .gitignore  CMakeLists.txt  Doxyfile  KanoopCommon.pro  LICENSE  README.md  addresshelper.cpp  addresshelper.h  commonexception.cpp  commonexception.h  cryptoutil.cpp  cryptoutil.h  datetimeutil.cpp  datetimeutil.h  fileutil.cpp  fileutil.h  jsonhelper.cpp  jsonhelper.h  kanoopcommon.cpp  kanoopcommon.h  klog.cpp  klog.h  libKanoopCommon.pc.in  mutexevent.cpp  mutexevent.h  pathutil.cpp  pathutil.h  ratemonitor.cpp  ratemonitor.h  stringutil.cpp  stringutil.h  threadutil.cpp  threadutil.h  timeconstants.h  timespan.cpp  timespan.h  timespan2.cpp  timespan2.h  userutil.cpp  userutil.h
.github/workflows/: ci.yaml
docs/: configqt  mainpage.md
docs/theme/: custom.css  header.html
geo/: earthgeo.cpp  earthgeo.h  geocircle.cpp  geocircle.h  geocoordinate.cpp  geocoordinate.h  geotypes.cpp  geotypes.h
geometry/: angle.cpp  angle.h  circle.cpp  flatgeo.cpp  flatgeo.h  geo.cpp  geo.h  line.cpp  line.h  pathrouter.cpp  pathrouter.h  point.cpp  point.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  spanningtree.cpp  spanningtree.h  treepathvertice.cpp  triangle.h
include/Kanoop/: addresshelper.h  commonexception.h  cryptoutil.h  daterange.h  datetimeutil.h  entitymetadata.h  fileutil.h  floatutil.h  jsonhelper.h  kanoopcommon.h  klog.h  lockingqueue.h  log.h  logcategory.h  logconsumer.h  logentry.h  loggingtypes.h  mutexevent.h  pathutil.h  ratemonitor.h  stringutil.h  threadutil.h  timeconstants.h  timespan.h  timespanrange.h  userutil.h
include/Kanoop/clientserver/: tcpserver.h  tcpserverclientobject.h  udpserver.h
include/Kanoop/geo/: earthgeo.h  geocircle.h  geocoordinate.h  geotypes.h
include/Kanoop/geometry/: angle.h  circle.h  ellipse.cpp  ellipse.h  flatgeo.h  geo.h  line.h  pathrouter.h  point.h  polygon.h  rectangle.h  size.h  spanningtree.h  treepathvertice.h  triangle.h
include/Kanoop/mqtt/: mqttclient.h  mqttparameters.h
include/Kanoop/serialization/: ideserializablefromjson.h  ideserializablefromxml.h  iserializableintodatastream.h  iserializabletobytearray.h  iserializabletojson.h  iserializabletoxml.h  serializablejsonlist.h  serializablexmllist.h
include/Kanoop/utility/: abstractthreadclass.h  appsettings.h  loggingbaseclass.h  procfsutil.h  procutil.h  unicode.h
src/Kanoop/: addresshelper.cpp  commonexception.cpp  cryptoutil.cpp  daterange.cpp  datetimeutil.cpp  entitymetadata.cpp  entitymetadatainfo.cpp  entitymetadatainfo.h  fileutil.cpp  floatutil.cpp  jsonhelper.cpp  klog.cpp  logconsumer.cpp  mutexevent.cpp  pathutil.cpp  ratemonitor.cpp  stringutil.cpp  threadutil.cpp  timespan.cpp  timespanrange.cpp  userutil.cpp
src/Kanoop/clientserver/: tcpserver.cpp  tcpserverclientobject.cpp  udpserver.cpp
src/Kanoop/geo/: earthgeo.cpp  geocircle.cpp  geocoordinate.cpp  geotypes.cpp
src/Kanoop/geometry/: angle.cpp  circle.cpp  flatgeo.cpp  geo.cpp  line.cpp  pathrouter.cpp  point.cpp  polygon.cpp  rectangle.cpp  size.cpp  spanningtree.cpp  treepathvertice.cpp  triangle.cpp
src/Kanoop/log/: log.cpp  logcategory.cpp  logcategoryprivate.cpp  logcategoryprivate.h  loggingtypes.cpp
src/Kanoop/mqtt/: mqttclient.cpp  mqttparameters.cpp
src/Kanoop/serialization/: ideserializablefromxml.cpp  iserializabletojson.cpp  serializablejsonlist.cpp  serializablexmllist.cpp
src/Kanoop/utility/: abstractthreadclass.cpp  appsettings.cpp  loggingbaseclass.cpp  procfsutil.cpp  procutil.cpp  unicode.cpp
tests/: CMakeLists.txt  tst_concurrency.cpp  tst_daterange.cpp  tst_geo.cpp  tst_geometry.cpp  tst_misc.cpp  tst_string.cpp  tst_timespan.cpp
